# live2p

./: .gitignore  LICENSE.txt  README.md  environment-GPU.yml  environment.yml  pyproject.toml  setup.py
live2p/: __init__.py  __main__.py  alerts.py  analysis.py  cli.py  guis.py  offline.py  start_live2p.py  utils.py  vis.py  workers.py  wrappers.py
live2p/analysis/: generic.py  spatial.py  tiffs.py  traces.py
live2p/flask_server/: models.py
live2p/plotting/: TODO.md
live2p/server/: __init__.py
live2p/server/flask_server/: app.py
live2p/server/tornado_server/: run.py
live2p/server/websockets/: alerts.py  server.py
live2p/tornado_server/: ws_handler.py
live2p/websockets/: app.py  core.py  events.py  server.py  server2.py
matlab/: Live2pWS.m  live2p.m  live2pquit.m  reset2p.m  sendUhOh.m  streamTiffData.m
matlab/callbacks/: live2pAcqDone.m  live2pSendSetup.m  live2pSessionDone.m
matlab/daq/: live2pHoloSocket.m  live2pStimSocket.m  live2pVisSocket.m
notebooks/: offline multifolder.ipynb  offline notebook.ipynb  run_live2p_offline.ipynb  test_processing.ipynb  wtf.ipynb
rig_files/: example_run.py  frankenscope.py
scripts/: run_live2p_multifolder_offline.py
testing/: test_basic_io.py  test_run_server.py  test_worker_offline.py
testing/tests/: conftest.py  pytest.ini  test_alerts.py  test_gpu.py  test_server.py  test_workers.py
tests/: test_gpu.py  test_run_server.py  test_server_basic_io.py  test_workers.py
