[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "live2p"
version = "1.0.0"
description = "Real-time calcium imaging processing with caiman and suite2p."
authors = [
    {name = "Will Hendricks", email = "hendriksw@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}

[project.scripts]
holochat = "live2p.cli:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]